<resources>
    <string name="app_name">Rakna</string>
    <string name="LetParkText">"Let's Park Your Car Now "</string>
    <string name="WelcomeForNew">Welcome For New Driver</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="logIn">Log In</string>
    <string name="newDriver">New Driver?</string>
    <string name="signUp">Sign Up</string>
    <string name="haveAnAccount">Have An Account?</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="full">Full</string>
    <string name="permissionsNeeded">Permission Needed</string>
    <string name="thisAppNeedsLocationPermission">This Application Needs Location Permissions In Order To Function</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="web_client_id" translatable="false">465072473463-vcttobckdkd6e3kbg9pm06bivn427emu.apps.googleusercontent.com</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="update">Update</string>
    <string name="navigate">Navigate</string>
    <string name="spectate">Spectate</string>
    <string name="parkingPlace">Parking Place</string>
    <string name="retry">retry</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="dataIsUpdated">Data is Updated</string>
    <string name="YouAddSame">There Is No Difference In Data</string>
    <string name="enterVName">Enter Valid Name</string>
    <string name="enterVNumber">Enter Valid Number</string>
    <string name="enterYName">Enter Your Name</string>
    <string name="enterYPhone">Enter Your Phone</string>
    <string name="enterYpassord">Enter Your Password</string>
    <string name="emailIsRequier">Email is Required</string>
    <string name="passordShort">Password is too Short</string>
    <string name="enterVemail">Please Enter Valid Email</string>
    <string name="registerSuccess">Registered Successfully</string>
    <string name="error">Error !</string>
    <string name="emailAlready">Email Already Exist</string>
    <string name="loginSuccess">Logged In Successfully</string>
    <string name="alreadyLogin">Already Logged In</string>
    <string name="authenticationPass">Authentication Passed.</string>
    <string name="authenticathinFaild">Authentication Failed.</string>
    <string name="signingUp">Signing Up</string>
    <string name="signingIn">Signing In</string>
    <string name="uploadingImage">Uploading Image</string>
    <string name="enterVpass">Enter Valid Password</string>
    <string name="failed">Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="addedToFavorites">Added To Favorites</string>
    <string name="removedFromFavorites">Removed From Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="loadingFavorites">Loading Favorites</string>
    <string name="booked">Booked</string>
    <string name="select">Select</string>
    <string name="parkedBy">This Spot Is Parked By</string>
    <string name="bookedBy">This Spot Is Booked By</string>
    <string name="nonRaknaUser">Non Rakna User</string>
    <string name="search_Bar">Search</string>
    <string name="no_parks_found">No Parks Found</string>
    <string name="book_qr_code">Book QR Code</string>
    <string name="Your_booking_code">Your Booking Qr Code Allows You to Enter The Parking Location</string>
    <string name="youhavenotBook">You haven\'t booked yet</string>
    <string name="book">Book</string>
    <string name="cancelBooking">Cancel Booking</string>
    <string name="cancelRouting">Cancel Routing</string>
    <string name="enable_traffic_mode">Enable Traffic Mode</string>
</resources>